--- a/local.compose.yml
+++ b/local.compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: docker/app/local/Dockerfile
     working_dir: /code
     command: python manage.py runserver 0.0.0.0:8000
-    container_name: app
+    container_name: django-template-app
     volumes:
       - ./src:/code
     ports:
@@ -28,7 +28,7 @@ services:
       context: .
       dockerfile: docker/app/local/Dockerfile
     command: celery -A example_app worker -l info
-    container_name: celery
+    container_name: django-template-celery
     working_dir: /code
     volumes:
       - ./src:/code
@@ -42,7 +42,7 @@ services:
       context: .
       dockerfile: docker/app/local/Dockerfile
     command: celery -A example_app beat -l info
-    container_name: celery-beat
+    container_name: django-template-celery-beat
     working_dir: /code
     volumes:
       - ./src:/code
@@ -55,14 +55,14 @@ services:
     build:
       context: .
       dockerfile: docker/redis/local/Dockerfile
-    container_name: redis
+    container_name: django-template-redis
 
   flower:
     build:
       context: .
       dockerfile: docker/app/local/Dockerfile
     command: celery -A example_app --broker=redis://redis:6379/0 flower --port=5555 --url_prefix=secret-flower
-    container_name: flower
+    container_name: django-template-flower
     working_dir: /code
     volumes:
       - ./src:/code
@@ -78,7 +78,7 @@ services:
     build:
       context: .
       dockerfile: docker/db/local/Dockerfile
-    container_name: postgres
+    container_name: django-template-postgres
     env_file:
       - .envs/local/.env
     volumes:
@@ -94,7 +94,7 @@ services:
     build:
       context: .
       dockerfile: docker/nginx/local/Dockerfile
-    container_name: nginx
+    container_name: django-template-nginx
     ports:
       - "80:80"
     depends_on:
